responcive, header, navbar

--- a/app/index.html
+++ b/app/index.html
@@ -4,25 +4,76 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Roulette</title>
+    <title>Universal College</title>
+    <link rel="stylesheet" href="css/bootstrap-reboot.min.css"/>
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
-    <div class="container-fixed">
-      <div class="container">
-        <div class="pb-100">
-          <div class="wrapper">
-            <div class="circle">
-              <div class="puzzle"><span>$55</span><br>annual target price of dolutegravir regimen per person per year in resource-limited setting</div>
-              <div class="puzzle blue"><span>15 M</span><br>number of people living with HIV without access to treatment</div>
-              <div class="puzzle">7-10 <br> years historically taken to introduce pioneering HIV treatments in Africa</div>
-              <div class="puzzle active"><span>3</span><br>numbers of years taken to introduce dolutegravir in Africa</div>
-              <div class="puzzle blue"><span>94</span><br>numbers of countries who can access generic versions of dolutegravir</div>
-              <div class="impact"><span>Impact</span><br>US $270 million - annual savings possible from scale-up of dolutegravir-based regimens if</div>
+    <div class="container-lg">
+      <header class="header">
+        <div class="main-header">
+          <div class="row">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+              <div class="header-info">
+                <h1 class="header-title">Universal College</h1>
+                <div class="description">Free PSD Website Template</div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+              <address>
+                <div class="header-address">Libero | Maecenas | Mauris | Suspendisse<br></div>
+                <div class="header-contact">Tel: xxxxx xxxxxxxxxx | Mail: info@domain.com</div>
+              </address>
             </div>
           </div>
         </div>
+        <div class="spoiler-header">
+          <h1 class="header-title">Universal College</h1>
+          <div class="header-text">
+            <p class="description">Free PSD Website Template</p>
+            <p class="header-address">Libero | Maecenas | Mauris | Suspendisse<br></p>
+            <p class="header-contact">Tel: xxxxx xxxxxxxxxx | Mail: info@domain.com</p>
+          </div>
+        </div>
+      </header>
+    </div>
+    <div class="container-lg container-pd-0">
+      <nav class="navbar navbar-expand-md navbar-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li><a href="#">Home <span class="sr-only">(current)</span></a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Page</a></li>
+            <li class="dropdown"><a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">DropDown</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown"><a class="dropdown-item" href="#">Action</a><a class="dropdown-item" href="#">Another action</a>
+                <div class="dropdown-divider"></div><a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+            <li><a href="#">Gallery</a></li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search this website..." aria-label="Search"/>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
+    </div>
+    <div class="container-lg">
+      <div class="hero"> gregter</div>
+      <section class="content">ergr</section>
+    </div>
+    <div class="container-lg container-footer">
+      <footer class="footer">Footer</footer>
+    </div>
+    <div class="container-lg container-pd-0">
+      <div class="copyright">
+        <p>Copyring   hh</p>
       </div>
     </div>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
