--- a/app/index.html
+++ b/app/index.html
@@ -39,11 +39,11 @@
       </header>
     </div>
     <div class="container-lg container-pd-0">
-      <nav class="navbar navbar-expand-md navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li><a href="#">Home <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Page</a></li>
             <li class="dropdown"><a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">DropDown</a>
@@ -54,7 +54,7 @@
             <li><a href="#">Gallery</a></li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search this website..." aria-label="Search"/>
+            <input class="form-control mr-sm-2" type="search" placeholder="Search this website..." aria-label="Search" maxlength="25"/>
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
