I made menu and footer

--- a/app/index.html
+++ b/app/index.html
@@ -64,13 +64,61 @@
       <div class="hero"> gregter</div>
       <section class="content">ergr</section>
     </div>
-    <div class="container-lg container-footer">
-      <footer class="footer">Footer</footer>
+    <div class="container-lg container-contact">
+      <div class="contact">
+        <div class="contact-main">
+          <div class="row justify-content-center">
+            <div class="col-12 col-sm-7 col-md-6 col-lg-4">
+              <div class="contact-item">
+                <div class="contact-form">
+                  <h4 class="title">Stay In The Know !</h4>
+                  <div class="contact-divider"></div>
+                  <div class="contact-action">Please enter your email to join our mailing list</div>
+                  <div class="contact-block">
+                    <form class="form-inline">
+                      <input class="form-input" type="text" minlength="4"/>
+                      <button class="btn btn-input btn-outline-success" type="submit">Go</button>
+                    </form><a class="contact-unsubscribe" href="#">To unsubsribe please click here »</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-7 col-md-6 col-lg">
+              <div class="contact-item">
+                <h4 class="title">Lacus interdum</h4>
+                <div class="contact-divider"></div>
+                <div class="contact-description">Lorem ipsum dolor Suspendisse in neque Praesent et eros Lorem ipsum dolor Suspendisse in neque</div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-7 col-md-6 col-lg">
+              <div class="contact-item">
+                <h4 class="title">Lacus interdum</h4>
+                <div class="contact-divider"></div>
+                <div class="contact-description">Lorem ipsum dolor Suspendisse in neque Praesent et eros Lorem ipsum dolor Suspendisse in neque</div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-7 col-md-6 col-lg">
+              <div class="contact-item">
+                <h4 class="title">Lacus interdum</h4>
+                <div class="contact-divider"></div>
+                <div class="contact-description">Lacus interdum Lorem ipsum dolor Suspendisse in neque Praesent et eros Lorem ipsum dolor Suspendisse in neque</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="container-lg container-pd-0">
-      <div class="copyright">
-        <p>Copyring   hh</p>
-      </div>
+      <footer class="footer">
+        <div class="row">
+          <div class="col">
+            <div class="copyright">Copyright © 2013 Domain Name - All Rights Reserved</div>
+          </div>
+          <div class="col">
+            <div class="template">Template by OS Templates</div>
+          </div>
+        </div>
+      </footer>
     </div>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
