I made section contact and footer

--- a/app/index.html
+++ b/app/index.html
@@ -110,11 +110,11 @@
     </div>
     <div class="container-lg container-pd-0">
       <footer class="footer">
-        <div class="row">
-          <div class="col">
+        <div class="row justify-content-col-center justify-content-md-start">
+          <div class="col-12 col-md-6">
             <div class="copyright">Copyright © 2013 Domain Name - All Rights Reserved</div>
           </div>
-          <div class="col">
+          <div class="col-12 col-md-6">
             <div class="template">Template by OS Templates</div>
           </div>
         </div>
