--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <div class="container-lg">
-      <header class="header">
-        <div class="main-header">
+      <header class="header pt-sm-4 pb-sm-4">
+        <div class="main-header pt-sm-2 pb-sm-2">
           <div class="row">
             <div class="col-sm-6 col-md-6 col-lg-6">
               <div class="header-info">
@@ -21,26 +21,26 @@
               </div>
             </div>
             <div class="col-sm-6 col-md-6 col-lg-6">
-              <address>
-                <div class="header-address">Libero | Maecenas | Mauris | Suspendisse<br></div>
-                <div class="header-contact">Tel: xxxxx xxxxxxxxxx | Mail: info@domain.com</div>
+              <address class="mt-2 mb-0 mr-lg-4">
+                <div class="header-address mb-sm-3">Libero | Maecenas | Mauris | Suspendisse<br></div><a class="header-contact" href="tel:+0000000000">Tel: xxxxx xxxxxxxxxx | </a><a class="header-contact" href="mailto:info@domain.com">Mail: info@domain.com</a>
               </address>
             </div>
           </div>
         </div>
-        <div class="spoiler-header">
+        <div class="spoiler-header mt-2">
           <h1 class="header-title">Universal College</h1>
           <div class="header-text">
-            <p class="description">Free PSD Website Template</p>
-            <p class="header-address">Libero | Maecenas | Mauris | Suspendisse<br></p>
-            <p class="header-contact">Tel: xxxxx xxxxxxxxxx | Mail: info@domain.com</p>
+            <div class="description mb-2">Free PSD Website Template</div>
+            <address class="mb-2">
+              <div class="header-address">Libero | Maecenas | Mauris | Suspendisse<br></div><a class="header-contact" href="tel:+0000000000">Tel: xxxxx xxxxxxxxxx | </a><a class="header-contact" href="mailto:info@domain.com">Mail: info@domain.com</a>
+            </address>
           </div>
         </div>
       </header>
     </div>
     <div class="container-lg container-pd-0">
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+      <nav class="navbar px-0 py-0 navbar-expand-lg navbar-light">
+        <button class="navbar-toggler my-2 my-lg-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
@@ -53,9 +53,9 @@
             </li>
             <li><a href="#">Gallery</a></li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search this website..." aria-label="Search" maxlength="25"/>
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <form class="form-inline">
+            <input class="form-control my-2 mr-2" type="search" placeholder="Search this website..." aria-label="Search" maxlength="25"/>
+            <button class="btn btn-outline-success my-2" type="submit">Search</button>
           </form>
         </div>
       </nav>
@@ -65,8 +65,8 @@
       <section class="content">ergr</section>
     </div>
     <div class="container-lg container-contact">
-      <div class="contact">
-        <div class="contact-main">
+      <div class="contact pt-4 pb-3">
+        <div class="contact-main pt-1">
           <div class="row justify-content-center">
             <div class="col-12 col-sm-7 col-md-6 col-lg-4">
               <div class="contact-item">
@@ -76,8 +76,8 @@
                   <div class="contact-action">Please enter your email to join our mailing list</div>
                   <div class="contact-block">
                     <form class="form-inline">
-                      <input class="form-input" type="text" minlength="4"/>
-                      <button class="btn btn-input btn-outline-success" type="submit">Go</button>
+                      <input class="form-input mr-1 my-2 my-lg-0" type="text" minlength="4"/>
+                      <button class="btn btn-input btn-outline-success my-2 my-lg-0" type="submit">Go</button>
                     </form><a class="contact-unsubscribe" href="#">To unsubsribe please click here »</a>
                   </div>
                 </div>
@@ -109,7 +109,7 @@
       </div>
     </div>
     <div class="container-lg container-pd-0">
-      <footer class="footer">
+      <footer class="footer py-3">
         <div class="row justify-content-col-center justify-content-md-start">
           <div class="col-12 col-md-6">
             <div class="copyright">Copyright © 2013 Domain Name - All Rights Reserved</div>
