I made content, widget-little

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
-    <div class="container-lg">
+    <div class="container-xl">
       <header class="header pt-sm-4 pb-sm-4">
         <div class="main-header pt-sm-2 pb-sm-2">
           <div class="row">
@@ -38,7 +38,7 @@
         </div>
       </header>
     </div>
-    <div class="container-lg container-pd-0">
+    <div class="container-xl container-pd-0">
       <nav class="navbar px-0 py-0 navbar-expand-lg navbar-light">
         <button class="navbar-toggler my-2 my-lg-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -60,11 +60,94 @@
         </div>
       </nav>
     </div>
-    <div class="container-lg">
-      <div class="hero"> gregter</div>
-      <section class="content">ergr</section>
+    <div class="container-xl">
+      <div class="hero"> gregte</div>
+      <section class="content pt-3 mt-2">
+        <div class="row">
+          <div class="col-md-8">
+            <div class="main-content">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="cart mb-4 pb-1">
+                    <h2 class="content-title">Indonectetus facilis leo nibh</h2>
+                    <div class="divider"></div><img class="cart-img img-fluid mx-auto d-block" src="img/300of150px.png" alt="#"/>
+                    <div class="cart-description">
+                      <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
+                      <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
+                    </div><a class="cart-link" href="#">Continue Reading »</a>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="cart mb-4 pb-1">
+                    <h2 class="content-title">Indonectetus facilis leo nibh</h2>
+                    <div class="divider"></div><img class="cart-img img-fluid mx-auto d-block" src="img/300of150px.png" alt="#"/>
+                    <div class="content-description">
+                      <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
+                      <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
+                    </div><a class="cart-link" href="#">Continue Reading »</a>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="cart mb-4 pb-1">
+                    <h2 class="content-title">Indonectetus facilis leo nibh</h2>
+                    <div class="divider"></div><img class="cart-img img-fluid mx-auto d-block" src="img/300of150px.png" alt="#"/>
+                    <div class="cart-description">
+                      <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
+                      <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
+                    </div><a class="cart-link" href="#">Continue Reading »</a>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="cart mb-4 pb-1">
+                    <h2 class="content-title">Indonectetus facilis leo nibh</h2>
+                    <div class="divider"></div><img class="cart-img img-fluid mx-auto d-block" src="img/300of150px.png" alt="#"/>
+                    <div class="cart-description">
+                      <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
+                      <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
+                    </div><a class="cart-link" href="#">Continue Reading »</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <aside class="mb-4 pb-1">
+              <div class="row">
+                <div class="col-12">
+                  <h2 class="content-title">Ametorci Phasellus</h2>
+                  <div class="divider"></div>
+                </div>
+              </div>
+              <h2 class="content-title">Ametorci Phasellus</h2>
+              <div class="divider"></div>
+              <div class="row mt-3 pt-1">
+                <div class="col">
+                  <div class="widget"><a href="#"><img src="img/80of80px.png" alt="#"/></a></div>
+                </div>
+                <div class="col">
+                  <div class="widget"><a href="#"><img src="img/80of80px.png" alt="#"/></a></div>
+                </div>
+                <div class="col">
+                  <div class="widget"><a href="#"><img src="img/80of80px.png" alt="#"/></a></div>
+                </div>
+              </div>
+              <div class="row mt-3 pt-1">
+                <div class="col">
+                  <div class="widget"><a href="#"><img src="img/80of80px.png" alt="#"/></a></div>
+                </div>
+                <div class="col">
+                  <div class="widget"><a href="#"><img src="img/80of80px.png" alt="#"/></a></div>
+                </div>
+                <div class="col">
+                  <div class="widget"><a href="#"><img src="img/80of80px.png" alt="#"/></a></div>
+                </div>
+              </div>
+            </aside>
+          </div>
+        </div>
+      </section>
     </div>
-    <div class="container-lg container-contact">
+    <div class="container-xl container-contact">
       <div class="contact pt-4 pb-3">
         <div class="contact-main pt-1">
           <div class="row justify-content-center">
@@ -72,7 +155,7 @@
               <div class="contact-item">
                 <div class="contact-form">
                   <h4 class="title">Stay In The Know !</h4>
-                  <div class="contact-divider"></div>
+                  <div class="divider"></div>
                   <div class="contact-action">Please enter your email to join our mailing list</div>
                   <div class="contact-block">
                     <form class="form-inline">
@@ -86,21 +169,21 @@
             <div class="col-12 col-sm-7 col-md-6 col-lg">
               <div class="contact-item">
                 <h4 class="title">Lacus interdum</h4>
-                <div class="contact-divider"></div>
+                <div class="divider"></div>
                 <div class="contact-description">Lorem ipsum dolor Suspendisse in neque Praesent et eros Lorem ipsum dolor Suspendisse in neque</div>
               </div>
             </div>
             <div class="col-12 col-sm-7 col-md-6 col-lg">
               <div class="contact-item">
                 <h4 class="title">Lacus interdum</h4>
-                <div class="contact-divider"></div>
+                <div class="divider"></div>
                 <div class="contact-description">Lorem ipsum dolor Suspendisse in neque Praesent et eros Lorem ipsum dolor Suspendisse in neque</div>
               </div>
             </div>
             <div class="col-12 col-sm-7 col-md-6 col-lg">
               <div class="contact-item">
                 <h4 class="title">Lacus interdum</h4>
-                <div class="contact-divider"></div>
+                <div class="divider"></div>
                 <div class="contact-description">Lacus interdum Lorem ipsum dolor Suspendisse in neque Praesent et eros Lorem ipsum dolor Suspendisse in neque</div>
               </div>
             </div>
@@ -108,7 +191,7 @@
         </div>
       </div>
     </div>
-    <div class="container-lg container-pd-0">
+    <div class="container-xl container-pd-0">
       <footer class="footer py-3">
         <div class="row justify-content-col-center justify-content-md-start">
           <div class="col-12 col-md-6">
