I made all content and widget

--- a/app/index.html
+++ b/app/index.html
@@ -68,43 +68,43 @@
             <div class="main-content">
               <div class="row">
                 <div class="col-md-6">
-                  <div class="cart mb-4 pb-1">
+                  <div class="cart mb-4 pb-1 mx-auto">
                     <h2 class="content-title">Indonectetus facilis leo nibh</h2>
-                    <div class="divider"></div><img class="cart-img img-fluid mx-auto d-block" src="img/300of150px.png" alt="#"/>
-                    <div class="cart-description">
+                    <div class="divider"></div><img class="cart-img img-fluid img-fluid mt-2 mb-3" src="img/300of150px.png" alt="#"/>
+                    <div class="cart-description pb-4">
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
-                    </div><a class="cart-link" href="#">Continue Reading »</a>
+                    </div><a class="cart-link pl-2 py-1" href="#">Continue Reading »</a>
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="cart mb-4 pb-1">
+                  <div class="cart mb-4 pb-1 mx-auto">
                     <h2 class="content-title">Indonectetus facilis leo nibh</h2>
-                    <div class="divider"></div><img class="cart-img img-fluid mx-auto d-block" src="img/300of150px.png" alt="#"/>
-                    <div class="content-description">
+                    <div class="divider"></div><img class="cart-img img-fluid img-fluid mt-2 mb-3" src="img/300of150px.png" alt="#"/>
+                    <div class="cart-description pb-4">
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
-                    </div><a class="cart-link" href="#">Continue Reading »</a>
+                    </div><a class="cart-link pl-2 py-1" href="#">Continue Reading »</a>
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="cart mb-4 pb-1">
+                  <div class="cart mb-4 pb-1 mx-auto">
                     <h2 class="content-title">Indonectetus facilis leo nibh</h2>
-                    <div class="divider"></div><img class="cart-img img-fluid mx-auto d-block" src="img/300of150px.png" alt="#"/>
-                    <div class="cart-description">
+                    <div class="divider"></div><img class="cart-img img-fluid img-fluid mt-2 mb-3" src="img/300of150px.png" alt="#"/>
+                    <div class="cart-description pb-4">
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
-                    </div><a class="cart-link" href="#">Continue Reading »</a>
+                    </div><a class="cart-link pl-2 py-1" href="#">Continue Reading »</a>
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="cart mb-4 pb-1">
+                  <div class="cart mb-4 pb-1 mx-auto">
                     <h2 class="content-title">Indonectetus facilis leo nibh</h2>
-                    <div class="divider"></div><img class="cart-img img-fluid mx-auto d-block" src="img/300of150px.png" alt="#"/>
-                    <div class="cart-description">
+                    <div class="divider"></div><img class="cart-img img-fluid img-fluid mt-2 mb-3" src="img/300of150px.png" alt="#"/>
+                    <div class="cart-description pb-4">
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
-                    </div><a class="cart-link" href="#">Continue Reading »</a>
+                    </div><a class="cart-link pl-2 py-1" href="#">Continue Reading »</a>
                   </div>
                 </div>
               </div>
@@ -118,28 +118,34 @@
                   <div class="divider"></div>
                 </div>
               </div>
-              <h2 class="content-title">Ametorci Phasellus</h2>
-              <div class="divider"></div>
-              <div class="row mt-3 pt-1">
-                <div class="col">
-                  <div class="widget"><a href="#"><img src="img/80of80px.png" alt="#"/></a></div>
+              <div class="widget-wrapper">
+                <div class="row mt-3 pt-1">
+                  <div class="col">
+                    <h2 class="content-title">Ametorci Phasellus</h2>
+                    <div class="divider"></div>
+                  </div>
                 </div>
-                <div class="col">
-                  <div class="widget"><a href="#"><img src="img/80of80px.png" alt="#"/></a></div>
+                <div class="row mt-2 pt-2">
+                  <div class="col-4">
+                    <div class="widget"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                  </div>
+                  <div class="col">
+                    <div class="widget"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                  </div>
+                  <div class="col">
+                    <div class="widget"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                  </div>
                 </div>
-                <div class="col">
-                  <div class="widget"><a href="#"><img src="img/80of80px.png" alt="#"/></a></div>
-                </div>
-              </div>
-              <div class="row mt-3 pt-1">
-                <div class="col">
-                  <div class="widget"><a href="#"><img src="img/80of80px.png" alt="#"/></a></div>
-                </div>
-                <div class="col">
-                  <div class="widget"><a href="#"><img src="img/80of80px.png" alt="#"/></a></div>
-                </div>
-                <div class="col">
-                  <div class="widget"><a href="#"><img src="img/80of80px.png" alt="#"/></a></div>
+                <div class="row mt-3 pt-3">
+                  <div class="col">
+                    <div class="widget"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                  </div>
+                  <div class="col">
+                    <div class="widget"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                  </div>
+                  <div class="col">
+                    <div class="widget"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                  </div>
                 </div>
               </div>
             </aside>
