--- a/app/index.html
+++ b/app/index.html
@@ -64,10 +64,10 @@
       <div class="hero"> gregte</div>
       <section class="content pt-3 mt-2">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-7 col-lg-8">
             <div class="main-content">
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-12 col-lg-6">
                   <div class="cart mb-4 pb-1 mx-auto">
                     <h2 class="content-title">Indonectetus facilis leo nibh</h2>
                     <div class="divider"></div><img class="cart-img img-fluid img-fluid mt-2 mb-3" src="img/300of150px.png" alt="#"/>
@@ -77,31 +77,31 @@
                     </div><a class="cart-link pl-2 py-1" href="#">Continue Reading »</a>
                   </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-12 col-lg-6">
                   <div class="cart mb-4 pb-1 mx-auto">
                     <h2 class="content-title">Indonectetus facilis leo nibh</h2>
                     <div class="divider"></div><img class="cart-img img-fluid img-fluid mt-2 mb-3" src="img/300of150px.png" alt="#"/>
-                    <div class="cart-description pb-4">
+                    <div class="cart-description pb-4 mb-3">
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
                     </div><a class="cart-link pl-2 py-1" href="#">Continue Reading »</a>
                   </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-12 col-lg-6">
                   <div class="cart mb-4 pb-1 mx-auto">
                     <h2 class="content-title">Indonectetus facilis leo nibh</h2>
                     <div class="divider"></div><img class="cart-img img-fluid img-fluid mt-2 mb-3" src="img/300of150px.png" alt="#"/>
-                    <div class="cart-description pb-4">
+                    <div class="cart-description pb-4 mb-3">
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
                     </div><a class="cart-link pl-2 py-1" href="#">Continue Reading »</a>
                   </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-12 col-lg-6">
                   <div class="cart mb-4 pb-1 mx-auto">
                     <h2 class="content-title">Indonectetus facilis leo nibh</h2>
                     <div class="divider"></div><img class="cart-img img-fluid img-fluid mt-2 mb-3" src="img/300of150px.png" alt="#"/>
-                    <div class="cart-description pb-4">
+                    <div class="cart-description pb-4 mb-3">
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
                     </div><a class="cart-link pl-2 py-1" href="#">Continue Reading »</a>
@@ -110,12 +110,29 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-5 col-lg-4">
             <aside class="mb-4 pb-1">
               <div class="row">
                 <div class="col-12">
                   <h2 class="content-title">Ametorci Phasellus</h2>
                   <div class="divider"></div>
+                  <div class="widget-news ml-0 pt-3 mb-3">
+                    <div class="row no-gutters">
+                      <div class="col-3">
+                        <div class="widget mx-auto"><img class="img-fluid" src="img/80of80px.png" alt="#"/></div>
+                      </div>
+                      <div class="col-9">
+                        <h2 class="content-title ml-2 pl-1 mb-0">Indonectetus facilis leo nibh</h2>
+                        <div class="cart-description ml-2 mb-1 pl-1">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
+                        <div class="link-block"><a class="cart-link pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12">
+                      <div class="divider"></div>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="widget-wrapper">
@@ -125,26 +142,38 @@
                     <div class="divider"></div>
                   </div>
                 </div>
-                <div class="row mt-2 pt-2">
+                <div class="row mt-2 pt-2 no-gutters">
                   <div class="col-4">
-                    <div class="widget"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                    <div class="widget mx-auto">
+                      <div class="block-img"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                    </div>
                   </div>
                   <div class="col">
-                    <div class="widget"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                    <div class="widget mx-auto">
+                      <div class="block-img"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                    </div>
                   </div>
                   <div class="col">
-                    <div class="widget"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                    <div class="widget mx-auto">
+                      <div class="block-img"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                    </div>
                   </div>
                 </div>
-                <div class="row mt-3 pt-3">
+                <div class="row mt-3 pt-3 no-gutters">
                   <div class="col">
-                    <div class="widget"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                    <div class="widget mx-auto">
+                      <div class="block-img"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                    </div>
                   </div>
                   <div class="col">
-                    <div class="widget"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                    <div class="widget mx-auto">
+                      <div class="block-img"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                    </div>
                   </div>
                   <div class="col">
-                    <div class="widget"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                    <div class="widget mx-auto">
+                      <div class="block-img"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
+                    </div>
                   </div>
                 </div>
               </div>
