--- a/app/index.html
+++ b/app/index.html
@@ -62,88 +62,155 @@
     </div>
     <div class="container-xl">
       <div class="hero"> gregte</div>
-      <section class="content pt-3 mt-2">
+      <div class="content pt-3 mt-2">
         <div class="row">
           <div class="col-md-7 col-lg-8">
-            <div class="main-content">
+            <main class="main-content">
               <div class="row">
                 <div class="col-md-12 col-lg-6">
-                  <div class="cart mb-4 pb-1 mx-auto">
+                  <article class="cart mb-4 pb-1 mx-auto">
                     <h2 class="content-title">Indonectetus facilis leo nibh</h2>
                     <div class="divider"></div><img class="cart-img img-fluid img-fluid mt-2 mb-3" src="img/300of150px.png" alt="#"/>
-                    <div class="cart-description pb-4">
+                    <div class="cart-description">
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
                     </div><a class="cart-link pl-2 py-1" href="#">Continue Reading »</a>
-                  </div>
+                  </article>
                 </div>
                 <div class="col-md-12 col-lg-6">
-                  <div class="cart mb-4 pb-1 mx-auto">
+                  <article class="cart mb-4 pb-1 mx-auto">
                     <h2 class="content-title">Indonectetus facilis leo nibh</h2>
                     <div class="divider"></div><img class="cart-img img-fluid img-fluid mt-2 mb-3" src="img/300of150px.png" alt="#"/>
-                    <div class="cart-description pb-4 mb-3">
+                    <div class="cart-description">
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
                     </div><a class="cart-link pl-2 py-1" href="#">Continue Reading »</a>
-                  </div>
+                  </article>
                 </div>
                 <div class="col-md-12 col-lg-6">
-                  <div class="cart mb-4 pb-1 mx-auto">
+                  <article class="cart mb-4 pb-1 mx-auto">
                     <h2 class="content-title">Indonectetus facilis leo nibh</h2>
                     <div class="divider"></div><img class="cart-img img-fluid img-fluid mt-2 mb-3" src="img/300of150px.png" alt="#"/>
-                    <div class="cart-description pb-4 mb-3">
+                    <div class="cart-description">
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
                     </div><a class="cart-link pl-2 py-1" href="#">Continue Reading »</a>
-                  </div>
+                  </article>
                 </div>
                 <div class="col-md-12 col-lg-6">
-                  <div class="cart mb-4 pb-1 mx-auto">
+                  <article class="cart mb-4 pb-1 mx-auto">
                     <h2 class="content-title">Indonectetus facilis leo nibh</h2>
                     <div class="divider"></div><img class="cart-img img-fluid img-fluid mt-2 mb-3" src="img/300of150px.png" alt="#"/>
-                    <div class="cart-description pb-4 mb-3">
+                    <div class="cart-description">
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
                     </div><a class="cart-link pl-2 py-1" href="#">Continue Reading »</a>
-                  </div>
+                  </article>
                 </div>
               </div>
-            </div>
+            </main>
           </div>
           <div class="col-md-5 col-lg-4">
             <aside class="mb-4 pb-1">
-              <div class="row">
-                <div class="col-12">
-                  <h2 class="content-title">Ametorci Phasellus</h2>
-                  <div class="divider"></div>
-                  <div class="widget-news ml-0 pt-3 mb-3">
-                    <div class="row no-gutters">
-                      <div class="col-3">
-                        <div class="widget mx-auto"><img class="img-fluid" src="img/80of80px.png" alt="#"/></div>
+              <div class="widget-wrapper">
+                <div class="row">
+                  <div class="col-12">
+                    <h2 class="content-title">Ametorci Phasellus</h2>
+                    <div class="divider"></div>
+                    <article class="widget-news mt-1 mb-3">
+                      <div class="row no-gutters d-flex flex-nowrap">
+                        <div class="col-4 col-md-4">
+                          <div class="widget mx-auto">
+                            <div class="block-img"><img class="img-fluid" src="img/80of80px.png" alt="#"/></div>
+                          </div>
+                        </div>
+                        <div class="col-8 col-md-8">
+                          <div class="widget-item ml-1">
+                            <h2 class="content-title mb-0">Indonectetus facilis leo nibh </h2>
+                            <div class="cart-description mb-1">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
+                            <div class="link-block ml-auto"><a class="cart-link pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
+                          </div>
+                        </div>
                       </div>
-                      <div class="col-9">
-                        <h2 class="content-title ml-2 pl-1 mb-0">Indonectetus facilis leo nibh</h2>
-                        <div class="cart-description ml-2 mb-1 pl-1">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
-                        <div class="link-block"><a class="cart-link pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
+                    </article>
+                    <div class="row">
+                      <div class="col-12">
+                        <div class="divider"></div>
                       </div>
                     </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-12">
-                      <div class="divider"></div>
+                    <article class="widget-news mt-1 mb-3">
+                      <div class="row no-gutters d-flex flex-nowrap">
+                        <div class="col-4 col-md-4">
+                          <div class="widget mx-auto">
+                            <div class="block-img"><img class="img-fluid" src="img/80of80px.png" alt="#"/></div>
+                          </div>
+                        </div>
+                        <div class="col-8 col-md-8">
+                          <div class="widget-item ml-1">
+                            <h2 class="content-title mb-0">Indonectetus facilis leo nibh </h2>
+                            <div class="cart-description mb-1">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
+                            <div class="link-block ml-auto"><a class="cart-link pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
+                          </div>
+                        </div>
+                      </div>
+                    </article>
+                    <div class="row">
+                      <div class="col-12">
+                        <div class="divider"></div>
+                      </div>
+                    </div>
+                    <article class="widget-news mt-1 mb-3">
+                      <div class="row no-gutters d-flex flex-nowrap">
+                        <div class="col-4 col-md-4">
+                          <div class="widget mx-auto">
+                            <div class="block-img"><img class="img-fluid" src="img/80of80px.png" alt="#"/></div>
+                          </div>
+                        </div>
+                        <div class="col-8 col-md-8">
+                          <div class="widget-item ml-1">
+                            <h2 class="content-title mb-0">Indonectetus facilis leo nibh </h2>
+                            <div class="cart-description mb-1">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
+                            <div class="link-block ml-auto"><a class="cart-link pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
+                          </div>
+                        </div>
+                      </div>
+                    </article>
+                    <div class="row">
+                      <div class="col-12">
+                        <div class="divider"></div>
+                      </div>
+                    </div>
+                    <article class="widget-news mt-1 mb-3">
+                      <div class="row no-gutters d-flex flex-nowrap">
+                        <div class="col-4 col-md-4">
+                          <div class="widget mx-auto">
+                            <div class="block-img"><img class="img-fluid" src="img/80of80px.png" alt="#"/></div>
+                          </div>
+                        </div>
+                        <div class="col-8 col-md-8">
+                          <div class="widget-item ml-1">
+                            <h2 class="content-title mb-0">Indonectetus facilis leo nibh </h2>
+                            <div class="cart-description mb-1">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
+                            <div class="link-block ml-auto"><a class="cart-link pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
+                          </div>
+                        </div>
+                      </div>
+                    </article>
+                    <div class="row">
+                      <div class="col-12">
+                        <div class="divider"></div>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="widget-wrapper">
-                <div class="row mt-3 pt-1">
+                <div class="row mt-3">
                   <div class="col">
                     <h2 class="content-title">Ametorci Phasellus</h2>
                     <div class="divider"></div>
                   </div>
                 </div>
-                <div class="row mt-2 pt-2 no-gutters">
-                  <div class="col-4">
+                <div class="row mt-2 no-gutters">
+                  <div class="col">
                     <div class="widget mx-auto">
                       <div class="block-img"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
                     </div>
@@ -159,7 +226,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="row mt-3 pt-3 no-gutters">
+                <div class="row mt-3 no-gutters">
                   <div class="col">
                     <div class="widget mx-auto">
                       <div class="block-img"><a href="#"><img class="img-fluid d-block mx-auto" src="img/80of80px.png" alt="#"/></a></div>
@@ -180,7 +247,7 @@
             </aside>
           </div>
         </div>
-      </section>
+      </div>
     </div>
     <div class="container-xl container-contact">
       <div class="contact pt-4 pb-3">
